fixed nav alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -97,7 +97,6 @@ nav li a:hover {
 }
 .navItems{
     float:left;
-    min-width: 500px;
 }
 label[for="navSearchBar"]
 {
